# opendetect

./: LICENSE  README.md  pyproject.toml
src/opendetect/: __init__.py  _vllm_shutdown.py  cli.py  config.py  data.py  metrics.py  registry.py
src/opendetect/detectors/: __init__.py  base.py  binoculars.py  dna_gpt.py  fast_detect_gpt.py  lrr.py  lusr.py  mage_utils.py  npr.py  rank.py  revise_detect.py  styledetect.py  supervised.py
src/opendetect/regenerators/: __init__.py  cache.py  hf_regen.py  openai_regen.py  vllm_regen.py
src/opendetect/revisers/: __init__.py  cache.py  hf_reviser.py  openai_reviser.py  vllm_reviser.py
src/opendetect/similarity/: __init__.py  bartscore.py
